--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="ReactRetail - Your one-stop shop for everything you need" />
+  <meta name="theme-color" content="#1f2937" />
+
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:title" content="ReactRetail" />
+  <meta property="og:description" content="Your one-stop shop for everything you need" />
+  <meta property="og:type" content="website" />
+
+  <!-- Font preconnect for performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+
+  <title>ReactRetail | MERN E-Commerce Platform</title>
+</head>
+
+<body class="bg-gray-50 min-h-screen">
+  <div id="root"></div>
+  <noscript>You need to enable JavaScript to run this application.</noscript>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
