refactor: rename project from ReactRetail to LucEst and update related references

--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="ReactRetail - Your one-stop shop for everything you need" />
+  <meta name="description" content="LucEst - Your one-stop shop for everything you need" />
   <meta name="theme-color" content="#1f2937" />
 
   <!-- Open Graph / Social Media Meta Tags -->
-  <meta property="og:title" content="ReactRetail" />
+  <meta property="og:title" content="LucEst" />
   <meta property="og:description" content="Your one-stop shop for everything you need" />
   <meta property="og:type" content="website" />
 
@@ -18,7 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
-  <title>ReactRetail | MERN E-Commerce Platform</title>
+  <title>LucEst | MERN E-Commerce Platform</title>
 </head>
 
 <body class="bg-gray-50 min-h-screen">
